Fix beaker://start alignment

--- a/app/stylesheets/builtin-pages.less
+++ b/app/stylesheets/builtin-pages.less
@@ -467,10 +467,6 @@
         flex-basis: 50%;
       }
     }
-
-    .subtitle-heading {
-      font-size: .7rem;
-    }
   }
 }
 
