--- a/app/stylesheets/builtin-pages/start.less
+++ b/app/stylesheets/builtin-pages/start.less
@@ -19,9 +19,8 @@
   // background-position: center;
 }
 
-.start-wrapper {
-  border: 0;
-  height: auto;
+.builtin-wrapper.start-wrapper {
+  display: block;
   width: 100%;
   background: #f0f0f0;
 
@@ -30,8 +29,6 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 10px;
-    font-size: .675rem;
     text-align: center;
 
     .btn {
